Address scrollbar bugs

--- a/app/components/pages/LayoutEditor.m.less
+++ b/app/components/pages/LayoutEditor.m.less
@@ -50,11 +50,7 @@
 }
 
 .element-container {
-  position: absolute;
-  top: 50px;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  flex-grow: 1;
 }
 
 .element-cell {
